# fastapi-test

./: .flake8  .gitignore  .mypy.ini  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: config.py  deps.py  exceptions.py  main.py
app/apis/: chats.py  events.py  users.py
app/handlers/: auth.py  db.py  jwt.py  redis.py
app/models/: base.py  events.py  users.py
app/schemas/: events.py  users.py
apps/planners/: models.py  routes.py
apps/planners/constant/: errors.py  params.py
apps/users/: models.py  routes.py
apps/users/constant/: errors.py
common/: consts.py  models.py
core/: auth.py  database.py  settings.py
core/constant/: errors.py
db/: init.sql
test_page/: main.js  test.html
tests/: conftest.py
