[tool.black]
target-version = ['py310']
line-length = 100

[tool.isort]
profile="black"
line_length=100

[tool.poetry]
name = "fastapi-test"
version = "0.1.0"
description = ""
authors = ["JngMkk <kjm0817ss@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
pydantic-settings = "^2.2.1"
aiomysql = "^0.2.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
aioredis = "^2.0.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
email-validator = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
